Add spring, hibernate ... dependencies

--- a/src/main/java/com/bouhouch/catalog/web/package.properties
+++ b/src/main/java/com/bouhouch/catalog/web/package.properties
@@ -3,3 +3,4 @@ reference.stringLength = The reference field should be between 3 and 10 characte
 designation.requiredstring = The designation field is required
 quantity.int = The quantity field should be an integer
 price.double = The price field should be a double
+designation.label = Designation
